@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020160326"
-#define public MagickPackageReleaseDate "snapshot-20160326"
+#define public MagickPackageVersionAddendum ".020160327"
+#define public MagickPackageReleaseDate "snapshot-20160327"
